import("//build/ohos.gni")

declare_args() {
  enable_zxing_cpp_test = false
}

config("config") {
  cflags = [
    "-fPIC",
    "-Wall",
    "-frtti",
    "-fexceptions",
    "-Wno-error=missing-field-initializers",
    "-Wno-error=missing-braces",
  ]

  cflags_cc = cflags
}

ohos_source_set("zxing-cpp_source") {
  sources = [
    "//third_party/zxing-cpp/core/src/BarcodeFormat.cpp",
    "//third_party/zxing-cpp/core/src/BinaryBitmap.cpp",
    "//third_party/zxing-cpp/core/src/BitArray.cpp",
    "//third_party/zxing-cpp/core/src/BitMatrix.cpp",
    "//third_party/zxing-cpp/core/src/BitMatrixIO.cpp",
    "//third_party/zxing-cpp/core/src/BitSource.cpp",
    "//third_party/zxing-cpp/core/src/CharacterSet.cpp",
    "//third_party/zxing-cpp/core/src/ConcentricFinder.cpp",
    "//third_party/zxing-cpp/core/src/Content.cpp",
    "//third_party/zxing-cpp/core/src/DecodeHints.cpp",
    "//third_party/zxing-cpp/core/src/ECI.cpp",
    "//third_party/zxing-cpp/core/src/GTIN.cpp",
    "//third_party/zxing-cpp/core/src/GenericGF.cpp",
    "//third_party/zxing-cpp/core/src/GenericGFPoly.cpp",
    "//third_party/zxing-cpp/core/src/GlobalHistogramBinarizer.cpp",
    "//third_party/zxing-cpp/core/src/GridSampler.cpp",
    "//third_party/zxing-cpp/core/src/HRI.cpp",
    "//third_party/zxing-cpp/core/src/HybridBinarizer.cpp",
    "//third_party/zxing-cpp/core/src/MultiFormatReader.cpp",
    "//third_party/zxing-cpp/core/src/MultiFormatWriter.cpp",
    "//third_party/zxing-cpp/core/src/PerspectiveTransform.cpp",
    "//third_party/zxing-cpp/core/src/ReadBarcode.cpp",
    "//third_party/zxing-cpp/core/src/ReedSolomonDecoder.cpp",
    "//third_party/zxing-cpp/core/src/ReedSolomonEncoder.cpp",
    "//third_party/zxing-cpp/core/src/Result.cpp",
    "//third_party/zxing-cpp/core/src/ResultPoint.cpp",
    "//third_party/zxing-cpp/core/src/TextDecoder.cpp",
    "//third_party/zxing-cpp/core/src/TextEncoder.cpp",
    "//third_party/zxing-cpp/core/src/TextUtfEncoding.cpp",
    "//third_party/zxing-cpp/core/src/Utf.cpp",
    "//third_party/zxing-cpp/core/src/WhiteRectDetector.cpp",
    "//third_party/zxing-cpp/core/src/ZXBigInteger.cpp",
    "//third_party/zxing-cpp/core/src/aztec/AZDecoder.cpp",
    "//third_party/zxing-cpp/core/src/aztec/AZDetector.cpp",
    "//third_party/zxing-cpp/core/src/aztec/AZEncoder.cpp",
    "//third_party/zxing-cpp/core/src/aztec/AZHighLevelEncoder.cpp",
    "//third_party/zxing-cpp/core/src/aztec/AZReader.cpp",
    "//third_party/zxing-cpp/core/src/aztec/AZToken.cpp",
    "//third_party/zxing-cpp/core/src/aztec/AZWriter.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMBitLayout.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMDataBlock.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMDecoder.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMDetector.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMECEncoder.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMHighLevelEncoder.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMReader.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMSymbolInfo.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMVersion.cpp",
    "//third_party/zxing-cpp/core/src/datamatrix/DMWriter.cpp",
    "//third_party/zxing-cpp/core/src/libzueci/zueci.c",
    "//third_party/zxing-cpp/core/src/maxicode/MCBitMatrixParser.cpp",
    "//third_party/zxing-cpp/core/src/maxicode/MCDecoder.cpp",
    "//third_party/zxing-cpp/core/src/maxicode/MCReader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCodabarReader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCodabarWriter.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCode128Patterns.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCode128Reader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCode128Writer.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCode39Reader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCode39Writer.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCode93Reader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODCode93Writer.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODDataBarCommon.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODDataBarExpandedBitDecoder.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODDataBarExpandedReader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODDataBarReader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODEAN13Writer.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODEAN8Writer.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODITFReader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODITFWriter.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODMultiUPCEANReader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODReader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODRowReader.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODUPCAWriter.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODUPCEANCommon.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODUPCEWriter.cpp",
    "//third_party/zxing-cpp/core/src/oned/ODWriterHelper.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFBarcodeValue.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFBoundingBox.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFCodewordDecoder.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFDecodedBitStreamParser.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFDetectionResult.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFDetectionResultColumn.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFDetector.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFEncoder.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFHighLevelEncoder.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFModulusGF.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFModulusPoly.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFReader.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFScanningDecoder.cpp",
    "//third_party/zxing-cpp/core/src/pdf417/PDFWriter.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRBitMatrixParser.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRCodecMode.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRDataBlock.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRDecoder.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRDetector.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QREncoder.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRErrorCorrectionLevel.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRFormatInformation.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRMaskUtil.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRMatrixUtil.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRReader.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRVersion.cpp",
    "//third_party/zxing-cpp/core/src/qrcode/QRWriter.cpp",
    "//third_party/zxing-cpp/core/src/stb_image.c",
  ]
  include_dirs = [
    "//third_party/zxing-cpp/",
    "//third_party/zxing-cpp/core",
    "//third_party/zxing-cpp/core/src",
    "//third_party/zxing-cpp/core/oned",
  ]
  configs = [ ":config" ]
}

ohos_executable("ZXingReader") {
  sources = [ "//third_party/zxing-cpp/example/ZXingReader.cpp" ]
  include_dirs = [
    "//third_party/zxing-cpp/core",
    "//third_party/zxing-cpp/core/src",
    "//third_party/zxing-cpp/core/oned",
  ]

  configs = [ ":config" ]

  deps = [ "//third_party/zxing-cpp:libzxing-cpp" ]
  subsystem_name = "thirdparty"
  part_name = "zxing-cpp"
  output_name = "ZXingReader"
}

ohos_executable("ZXingWriter") {
  sources = [ "//third_party/zxing-cpp/example/ZXingWriter.cpp" ]
  include_dirs = [
    "//third_party/zxing-cpp/core",
    "//third_party/zxing-cpp/core/src",
    "//third_party/zxing-cpp/core/oned",
  ]

  configs = [ ":config" ]

  deps = [ "//third_party/zxing-cpp:libzxing-cpp" ]
  subsystem_name = "thirdparty"
  part_name = "zxing-cpp"
  output_name = "ZXingWriter"
}

ohos_shared_library("libzxing-cpp") {
  deps = [ ":zxing-cpp_source" ]
  part_name = "zxing-cpp"
  output_name = "zxing-cpp"
}

group("zxing_cpp_targets") {
  deps = [ ":libzxing-cpp" ]
  if (enable_zxing_cpp_test) {
    deps += [
      ":ZXingReader",
      ":ZXingWriter",
    ]
  }
}
