# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("openjpeg_cflag_config") {
  cflags = [
      "-Wno-unused-function",
      ]
}

ohos_shared_library("openjp2") {
   sources = [
    "//third_party/openjpeg/src/lib/openjp2/thread.c",
    "//third_party/openjpeg/src/lib/openjp2/bio.c",
    "//third_party/openjpeg/src/lib/openjp2/cio.c",
    "//third_party/openjpeg/src/lib/openjp2/dwt.c",
    "//third_party/openjpeg/src/lib/openjp2/event.c",
    "//third_party/openjpeg/src/lib/openjp2/ht_dec.c",
    "//third_party/openjpeg/src/lib/openjp2/image.c",
    "//third_party/openjpeg/src/lib/openjp2/invert.c",
    "//third_party/openjpeg/src/lib/openjp2/j2k.c",
    "//third_party/openjpeg/src/lib/openjp2/jp2.c",
    "//third_party/openjpeg/src/lib/openjp2/mct.c",
    "//third_party/openjpeg/src/lib/openjp2/mqc.c",
    "//third_party/openjpeg/src/lib/openjp2/openjpeg.c",
    "//third_party/openjpeg/src/lib/openjp2/opj_clock.c",
    "//third_party/openjpeg/src/lib/openjp2/pi.c",
    "//third_party/openjpeg/src/lib/openjp2/t1.c",
    "//third_party/openjpeg/src/lib/openjp2/t2.c",
    "//third_party/openjpeg/src/lib/openjp2/tcd.c",
    "//third_party/openjpeg/src/lib/openjp2/tgt.c",
    "//third_party/openjpeg/src/lib/openjp2/function_list.c",
    "//third_party/openjpeg/src/lib/openjp2/opj_malloc.c",
    "//third_party/openjpeg/src/lib/openjp2/sparse_array.c",
  ]

  include_dirs = [
    "//third_party/openjpeg/src/lib/openjp2"
  ]

  configs = [ 
    ":openjpeg_cflag_config"
  ]

  part_name = "openjpeg_lib"
}
